feat/migrate: fix auth
